--- a/jiankangdajiangtang/index.html
+++ b/jiankangdajiangtang/index.html
@@ -34,12 +34,12 @@
 <body>
 <div class="page_wrap">	
 	<div class="main">
-	<header class="header_xq16390">
+	<!-- <header class="header_xq16390">
 		<div class="fanhui">
 			<a href="javascript:history.go(-1)">返回</a>
 		</div>
 		<div class="head_title">健康大讲堂直播</div>
-	</header>
+	</header> -->
 	<div class="banner_xq16390">
 		<img src="images/image1.jpg">
 	</div>
